--- a/homeworks/HW06/HW06.ipynb
+++ b/homeworks/HW06/HW06.ipynb
@@ -959,7 +959,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 124,
    "id": "76516747-7abf-48e2-a3a0-fd1f22e5100d",
    "metadata": {},
    "outputs": [],
@@ -1011,7 +1011,7 @@
     "        return\n",
     "    RocCurveDisplay.from_estimator(model, X_test, y_test)\n",
     "    plt.title(title)\n",
-    "    plt.savefig(\"artifacts/figures/Roc-кривая.png\")\n",
+    "    plt.savefig(\"artifacts/figures/Roc-curve.png\")\n",
     "    plt.show()"
    ]
   },
@@ -1432,7 +1432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 125,
    "id": "29f5399d-7364-4deb-a706-1609d5d3fe7f",
    "metadata": {},
    "outputs": [
@@ -1521,7 +1521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 123,
    "id": "6589b729-7d89-4d40-a164-2454c71d108b",
    "metadata": {},
    "outputs": [
